# jaxborg

./: .gitignore  AGENTS.md  CLAUDE.md  CYBORG_DIFFERENCES.md  README.md  pyproject.toml
scripts/: parity_loop.sh  ralph_wiggum.sh  ralph_wiggum_bugcheck.sh
scripts/baselines/: compare_policies.py  eval_jax_baselines.py  eval_random.py  eval_sleep.py  plot_comparison.py  train_ippo_cc4.py  train_ppo.py
scripts/configs/: ippo_cc4.yaml  ppo_baseline.yaml  ppo_baseline_short.yaml
src/jaxborg/: actions.py  constants.py  env.py  fsm_red_env.py  observations.py  reassignment.py  rewards.py  state.py  topology.py  translate.py
src/jaxborg/actions/: __init__.py  blue_analyse.py  blue_decoys.py  blue_monitor.py  blue_remove.py  blue_restore.py  blue_traffic.py  duration.py  encoding.py  green.py  masking.py  pids.py  red_aggressive_scan.py  red_common.py  red_degrade.py  red_discover.py  red_discover_deception.py  red_exploit.py  red_impact.py  red_privesc.py  red_scan.py  red_stealth_scan.py  red_withdraw.py  rng.py  session_counts.py
src/jaxborg/agents/: __init__.py  fsm_red.py
tests/: catalog.py  catalog_status.json  conftest.py  test_action_mask.py  test_action_mask_differential.py  test_bootstrap.py  test_bugcheck.py  test_cc2_regression.py  test_cc4_env.py  test_cc4_env_differential.py  test_env_smoke.py  test_fsm_red_env.py  test_fsm_red_env_differential.py  test_fuzz_gaps.py  test_green_parity.py  test_green_unit.py  test_reward_comparison.py  test_training_parity.py  test_training_smoke.py
tests/differential/: action_translator.py  fuzzer.py  green_recorder.py  harness.py  recording_rng.py  state_comparator.py  test_blue_policy_fuzz.py  test_parity_gaps.py  test_strict_harness_mode.py
tests/subsystems/: test_action_duration.py  test_blue_analyse.py  test_blue_decoys.py  test_blue_monitor.py  test_blue_remove.py  test_blue_restore.py  test_blue_traffic.py  test_cc4_new_red_actions.py  test_cross_subnet_reassignment.py  test_dynamic_topology.py  test_fsm_red_agent.py  test_full_episode_fuzzing.py  test_green_agents.py  test_multi_agent_messaging.py  test_observations.py  test_phase_transitions.py  test_reassignment.py  test_red_discover.py  test_red_exploit_remaining.py  test_red_exploit_ssh.py  test_red_impact.py  test_red_privesc.py  test_red_scan.py  test_rewards.py  test_static_topology.py
